feat: cad of admin
