# api/src/swagger.json
@@ -215,6 +215,33 @@
         }
       }
     },
+    "/users/admin": {
+      "post": {
+        "summary": "Cadastro de Admin",
+        "tags": ["Admin"],
+        "requestBody": {
+          "required": true,
+           "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": ["cpf", "name", "email", "password"],
+                "properties": {
+                  "cpf": { "type": "string" },
+                  "name": { "type": "string" },
+                  "email": { "type": "string" },
+                  "password": { "type": "string" }
+                }
+              }
+            }
+          }
+        },
+         "responses": {
+          "201": { "description": "Admin criado com sucesso" },
+          "400": { "description": "Erro de validação" }
+        }
+      }
+    },
     "/products": {
       "post": {
         "summary": "Cria um novo produto",
